--- a/gs.css
+++ b/gs.css
@@ -31,9 +31,9 @@
 }
 
 table{
-	border: solid 4px;
+	border: solid 2px;
 	margin: auto;
-	color: blue;
+	color: rgb(21, 21, 22);
 	text-align: center;
 	border-collapse: collapse;
 }
